--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,8 +17,9 @@
         <p>
           {{ .Site.Params.description | safeHTML }}
         </p>
+
+        <!-- add content from _index.html -->
         <div class="homepage-content">
-          <!-- Note that the content for index.html, as a sort of list page, will pull from content/_index.md -->
           {{.Content}}
         </div>
         <!-- navigation -->
